[tool.poetry]
name = "sema4ai-gallery"
version = "0.1.0"
description = "A brief description of your package"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.packages]
# Define the package structure
include = [
    { include = "sema4ai/gallery/actions/excel", from = "actions/excel" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
