[tool.poetry]
name = "sema4ai-gallery"
version = "0.1.0"
description = "A brief description of your package"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

packages = [
    { include = "actions.excel", from = "actions/excel" }
]

[tool.poetry.dependencies]
python = "^3.10"
sema4ai-actions = "1.3.0"
pydantic = "2.10.4"
robocorp-excel = "0.4.5"
pandas = "2.2.3"
sema4ai-crossplatform = "0.1.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
